# d3text

./: .gitignore  .gitmodules  brenda_conn.toml  config.ini  config.py  config.toml  current_model_config.toml  enzymes.py  fulltext_retriever.py  get_pmcs.py  get_reference_list.py  mkdocs.yml  models.csv  par_report.py  pyproject.toml  requirements.txt  tuning.py  unavailable_pubmed_ids.csv
backend/: api.py  db.py  log.py  run.py
backend/datamodel/: datamodel.py
data/: bacteria.txt  enzymes.txt  references.csv  strains.txt
database/: references.csv
docs/: utils.md
entities/: data.py  models.py  serialize.py  tuning.py
entities/data/: data.py
entities/datasets/: __init__.py  datasets.py
entities/models/: __init__.py  current_model_config.toml  dict_tagger.py  models.py
entities/tests/: test_dict_tagger.py  test_predictions.py  test_serialize.py  test_utils.py
entities/utils/: utils.py
output_data/: references.csv
scripts/: __init__.py  annotate.py  evaluate.py  feed.py  generate_embeddings.py  get_annotation_targets.py  precompute_embeddings.py  precompute_encodings.py  reset_annotations.py  train.py  tune.py
src/: data.py  serialize.py
src/d3text/: __init__.py
src/d3text/data/: __init__.py  data.py
src/d3text/models/: __init__.py  config.py  dict_tagger.py  model_types.py  models (conflicted copy 2025-05-21 201106).py  models.py
src/d3text/utils/: __init__.py  utils.py
src/d3text/utils/tests/: test_utils.py
src/models/: models.py
src/tests/: test_dict_tagger.py  test_predictions.py  test_serialize.py  test_utils.py
tests/: best_config_so_far.toml  test_abstract.txt  test_annotation_pipeline.py  test_data.py  test_model_config.toml  test_utils.py  teste_output_config.toml  train_script_output_config.toml  tuning_config.toml
utils/: utils.py
utils/tests/: test_utils.py
xmlparser/: __init__.py  pubmed.xsl  pubmed_article.xsl  xmlparser.py
xmlparser/tests/: test_xmlparser.py
