[project]
name = "d3text"
version = "0.1.0"
description = "D3 text mining models"
authors = [{ name = "Emanuel Souza de Quadros" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MPL-2.0"
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  "datasets>=3.1.0,<4",
  "jaxtyping>=0.3.2",
  "lxml>=5.2.2,<6",
  "rapidfuzz>=3.9.7,<4",
  "retrying>=1.3.4,<2",
  "seqeval>=1.2.2,<2",
  "sqlmodel>=0.0.22,<0.0.23",
  "transformers>=4.42",
  "xmltodict>=0.14.0,<0.15",
  "tomlkit>=0.13.2",
  "brenda-references",
  "h5py>=3.13.0",
  "hdf5plugin>=5.1.0",
  "cacheout>=0.16.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.7.0"]
cu128 = ["torch>=2.7.0"]
cu118 = ["torch>=2.7.0"]
rocm = ["torch>=2.7.0", "pytorch-triton-rocm"]

[project.scripts]
feed = "scripts.feed:main"
train = "scripts.train:main"
backend_start = "backend.run:main"
annotate = "scripts.annotate:main"
get_annotation_targets = "scripts.get_annotation_targets:main"
reset_annotations = "scripts.reset_annotations:main"
train_tokenizer = "scripts.train_tokenizer:main"
tuning = "scripts.tuning:main"

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu128" }, { extra = "cu118" }, {extra = "rocm"}]]

[[tool.uv.index]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu128"
  explicit = true

[[tool.uv.index]]
name = "torch_cuda118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
  
[[tool.uv.index]]
name = "torch_rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[[tool.uv.index]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "torch_cpu", extra = "cpu" },
  { index = "torch_cuda", extra = "cu128" },
  { index = "torch_cuda118", extra = "cu118" },
  { index = "torch_rocm", extra = "rocm" }
]
pytorch-triton-rocm = { index = "torch_rocm", extra = "rocm" }
brenda-references = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["F722"]

[tool.mypy-seqeval]
disable_error_code = "import_untyped"

[tool.mypy-transformers]
follow_imports = "silent"

[tool.mypy-sqlmodel]
follow_imports = "silent"

[tool.mypy]
plugins = "sqlmypy"
